scrollbar fix

--- a/controls.css
+++ b/controls.css
@@ -204,13 +204,16 @@ select option {
     text-align: right;
     position: absolute;
     right: 0;
-    top: 90px;
+    top: 80px;
     z-index: 1;
     width: 25px;
+    background: -webkit-linear-gradient(90deg, transparent 0%, var(--main) 90%, var(--main) 100%);
+    background: linear-gradient(90deg, transparent 0%, var(--main) 90%, var(--main) 100%);
 }
 
 .alphabeticalScrollLetter {
     width: 100%;
     z-index: 1;
+    color: var(--accent);
     /* background-color: red; */
 }
